--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThisLink.is - URL Shortener</title>
+    <title>URL Shortener</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>ThisLink.is</h1>
+        <h1>URL Shortener</h1>
         <div class="url-shortener">
             <input type="url" id="longUrlInput" placeholder="Enter your long URL here" required>
             <button id="generateButton">Generate Short URL</button>
