add a list of previous URLs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <p id="shortUrlOutput"></p>
             <button id="copyButton" style="display: none;">Copy</button>
         </div>
+        <div id="previousUrls" class="previous-urls">
+            <h2>Previously Generated URLs</h2>
+            <ul id="urlList"></ul>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
