add pico.css and a few tlc improvements

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URL Shortener</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <h1>URL Shortener</h1>
         <div class="url-shortener">
             <input type="url" id="longUrlInput" placeholder="Enter your long URL here" required>
@@ -18,10 +18,21 @@
             <button id="copyButton" style="display: none;">Copy</button>
         </div>
         <div id="previousUrls" class="previous-urls">
+            <hr>
             <h2>Previously Generated URLs</h2>
-            <ul id="urlList"></ul>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Short URL</th>
+                        <th>Original URL</th>
+                    </tr>
+                </thead>
+                <tbody id="urlTableBody">
+                    <!-- Rows will be dynamically added here -->
+                </tbody>
+            </table>
         </div>
-    </div>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
