add the ability to clear the list of previous URLs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         </div>
         <div id="previousUrls" class="previous-urls">
             <hr>
-            <h2>Previously Generated URLs</h2>
+            <div class="previous-urls-header">
+                <h2>Previously Generated URLs</h2>
+                <button id="clearUrlsButton" class="secondary">Clear URLs</button>
+            </div>
             <table>
                 <thead>
                     <tr>
