move the clear urls button to the top

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <hr>
             <div class="previous-urls-header">
                 <h2>Previously Generated URLs</h2>
-                <button id="clearUrlsButton" class="secondary">Clear URLs</button>
             </div>
             <table>
                 <thead>
@@ -33,6 +32,13 @@
                 <tbody id="urlTableBody">
                     <!-- Rows will be dynamically added here -->
                 </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2" class="text-right">
+                            <button id="clearUrlsButton">Clear All</button>
+                        </td>
+                    </tr>
+                </tfoot>
             </table>
         </div>
     </main>
